Refactor main() to take command line arguments and show timing info. Also add DEBUG symbol to cout data or not during parallel sort

--- a/HW2CMPSC450.vcxproj
+++ b/HW2CMPSC450.vcxproj
@@ -46,6 +46,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <OpenMPSupport>true</OpenMPSupport>
+      <AdditionalOptions>-D_SCL_SECURE_NO_WARNINGS %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
